First page done

--- a/share.html
+++ b/share.html
@@ -63,14 +63,10 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" data-target="slide-out" class="brand-logo sidenav-trigger">
-        <!-- <i class="material-icons">settings</i> -->
-        LOGO
+      <a href="#!" data-target="slide-out" class="brand-logo left sidenav-trigger">
+        <i class="material-icons">settings</i>
       </a>
-      <ul id="nav-mobile"  class="right hide-on-med-and-down">
-        <!-- <li>
-            <a href="#settings" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">settings</i></a>
-        </li> -->
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="share.html">Kirim</a></li>
       </ul>
