[fix ]wrong music extension

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <!-- Musik -->
   <!-- <embed src="bgm/jingle-bells-keyboard.mid" autostart="true"> -->
   <audio autoplay loop>
-    <source src="bgm/">
+    <source src="bgm/jingle-bells.mp3">
   </audio>
 
 
