Kurang sidenav (menu setting) dan halaman lainnya

--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
       <!-- <i class="material-icons">settings</i> -->
       <!-- LOGO -->
       <!-- </a> -->
-      <ul id="nav-mobile" class="right show-on-med-and-down">
+      <ul id="nav-mobile" class="left show-on-med-and-down">
         <!-- <li>
             <a href="#settings" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">settings</i></a>
         </li> -->
-        <li class="active"><a href="index.html">Selamat Natal 2019</a></li>
+        <li class="active"><a>Selamat Natal 2019</a></li>
+        <!-- <li class="active"><a href="index.html">Selamat Natal 2019</a></li> -->
         <!-- <li><a href="share.html">Kirim</a></li> -->
       </ul>
     </div>
@@ -105,31 +106,38 @@
       </div>
     </li>
 
-    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+    <!-- <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li> -->
+    <!-- <li><a href="#!">Second Link</a></li> -->
+    <!-- <li><div class="divider"></div></li> -->
 
-    <li><a href="#!">Second Link</a></li>
+    <li><a class="subheader">Pengaturan (belum jadi)</a></li>
+    <li><a href="#!">Bahasa</a></li>
+    
+      <form action="#">
+        <label>
+          <input name="group1" class="with-gap" type="radio" checked />
+          <span>Indonesia</span>
+        </label>
+        <label>
+          <input name="group1" class="with-gap" type="radio" />
+          <span>English</span>
+        </label>
+      </form>
+    
 
-    <li>
-      <div class="divider"></div>
-    </li>
-
-    <li><a class="subheader">Setting</a></li>
-
-
-
-    <li>
+    <li><a>
       <div class="switch">
         Efek salju
         <label>
           Off
           <input type="checkbox">
-          <span class="lever"></span>
+          <span class="lever" ></span>
           On
         </label>
       </div>
-    </li>
+    </a></li>
 
-    <li>
+    <li><a>
       <div class="switch">
         Musik
         <label>
@@ -139,9 +147,12 @@
           On
         </label>
       </div>
-    </li>
+    </a></li>
 
-    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    <li><div class="divider"></div></li>
+
+    <li><a class="waves-effect" href="#!">Tentang</a></li>
+    <li><a class="waves-effect" href="#!">Source Code</a></li>
   </ul>
   <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
 
