Blog selesai, bikin pakai card

--- a/pages/RekomendasiFilm.html
+++ b/pages/RekomendasiFilm.html
@@ -1,7 +1,237 @@
-<div class="container">
-  <div class="card-panel deep-orange lighten-4 col s12 m8 offset-m2">
-    <h1>
-      10 Film Tema Natal
-    </h1>
+<div class="card-panel deep-orange lighten-4 col s12 m8 offset-m2">
+  <h2 class="header">10 FILM TEMA NATAL</h2>
+  <img class="responsive-img"
+    src="https://cdn.images.express.co.uk/img/dynamic/25/590x/Christmas-flights-save-money-on-travel-1210089.jpg?r=1574954041780">
+  <p class="flow-text left-align">
+    Natal adalah waktu ketika kebahagiaan ada di seluruh dunia. Ini adalah waktu untuk berpesta, musik, dan film. Natal tidak pernah menjadi penuh tanpa menonton film Natal. Beberapa film luar biasa dirilis setiap tahun di seluruh dunia selama Natal. Hanya sedikit dari film-film itu yang dianggap sebagai film Natal teratas sepanjang masa dan selalu hijau. Kamu pasti akan menyukai daftar film di sini untuk perayaan Natal mendatang.
+<br>
+Berikut adalah daftar 10 film Natal terbaik sepanjang masa yang tidak boleh kamu lewatkan pada saat Natal mendatang.
+  </p>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549379512_5c59a7b8605f4.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">1. Home Alone, 1990<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: Kompasiana.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Home Alone, 1990<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Home Alone adalah film komedi Natal yang dirilis pada tahun 1990. Ceritanya menyenangkan dan menarik. Seorang bocah lelaki berusia delapan tahun bernama Kevin ditinggalkan oleh keluarganya secara tidak sengaja di rumahnya dan dibiarkan menghadapi beberapa petualangan dan kesenangan. Keluarga itu terbang ke Paris meninggalkan Kevin. Pada awalnya, Kevin senang bertanggung jawab atas rumah dan dirinya sendiri tetapi dalam masalah serius ketika pencuri masuk. Kevin kabel dan memasang perangkap di rumahnya untuk menghentikan dua pencuri merampok rumah.
+          <br>
+          Macaulay Culkin sebagai bintang cilik dalam film ini telah melakukan pekerjaan luar biasa. Dia dinominasikan untuk Golden Globe Award untuk Aktor Terbaik - Musikal atau Komedi. Setelah film dirilis, film ini menjadi film komedi aksi hidup terlaris sepanjang masa di AS. Pada 2011, The Hangover Part II memecahkan rekor. Ini adalah film Natal terlaris di box office Amerika Utara ketika disesuaikan dengan inflasi.
+        </p>
+      </div>
+    </div>
   </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549379650_5c59a842278cc.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">2. Die Hard, 1988<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: Discovercity.id</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">2. Die Hard, 1988<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Jika kamu adalah anak 90-an, maka film Die Hard adalah sesuatu yang kamu akan hargai sebagai kenangan manis dan nostalgia. Film thriller American Action 1988 ini telah menjadi salah satu film aksi dan Natal terbaik yang pernah dibuat. Bruce Willis berperan sebagai John McClane, seorang perwira NYPD yang berusaha keras untuk menyelamatkan nyawa istrinya dan banyak lainnya disandera oleh seorang teroris Jerman. Teroris Jerman Hans Gruber menyandera orang-orang selama pesta Natal di mana McClane tiba di menara pesta dengan maksud untuk berdamai dengan istrinya yang terasing. Adegan berubah ketika teroris dan timnya yang bersenjata lengkap datang dengan maksud untuk merampok menara obligasi pembawa senilai $640 juta. John McClane lolos dari sandera. Misi pengunduran dirinya adalah sebuah thriller.
+<br>
+Film yang dibuat dengan hanya $28 juta itu menghasilkan lebih dari $140 juta secara teatrikal di seluruh dunia. Sebelum film ini, Bruce Willis adalah aktor komedian dan setelah film itu ia menjadi terkenal sebagai pahlawan aksi. Film ini menduduki peringkat #20 dalam daftar 100 film terhebat sepanjang masa di majalah Empire 2017.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380015_5c59a9af0245d.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">3. Elf, 2003<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: bapa-kami.blogspot.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Elf, 2003<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          KElf adalah film komedi fantasi Natal yang menarik yang dibintangi Will Ferrell, James Caan, dan banyak lainnya. Film ini didasarkan pada peri Santa yang menyebarkan sorakan Natal di dunia yang sinis. Dalam film Will Ferrell dibintangi sebagai peri yang mengetahui bahwa dia sebenarnya adalah manusia. Menurut cerita, pada Malam Natal, seorang bayi laki-laki merangkak ke dalam karung Santa Claus dan dipindahkan ke Kutub Utara. Peri di Kutub Utara menamainya sebagai "Buddy" dan bocah itu diadopsi oleh Papa Elf. Bocah itu tumbuh di Kutub Utara, mengira dia juga peri. Film ini diputar secara menarik ketika Buddy pergi ke New York untuk bertemu ayah kandungnya.
+<br>
+          Elf dibuat dengan anggaran hanya $33 juta tetapi karena beberapa ulasan positif dari para kritikus, film ini meraup $220 juta di seluruh dunia. Film ini juga mengilhami musikal Broadway dan film animasi khusus gerak.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380089_5c59a9f932a48.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">4. The Polar Express, 2004<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: cybersulutnews.co.id</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">The Polar Express, 2004<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          The Polar Express adalah film fantasi animasi 3D berdasarkan buku anak-anak tahun 1985 dengan nama yang sama. Film ini dibuat dengan anggaran pemecahan rekor sebesar $165 juta. Anggarannya sangat besar untuk film animasi saat ini. Film bertema Natal didasarkan pada petualangan seorang bocah lelaki yang skeptis tentang keberadaan Sinterklas. Bocah itu tidak bisa tidur di malam Natal yang dibangunkan oleh kedatangan kereta uap dan ingin menyelidikinya. Kondektur tiket memperkenalkan kereta saat Polar Express ditakdirkan ke Kutub Utara. Awalnya, bocah itu menolak untuk naik kereta tetapi kemudian naik ketika kereta mulai bergerak. Petualangan magis di kereta mendebarkan dengan suguhan visual yang menakjubkan.
+<br>
+Film ini menghasilkan $310,6 juta di seluruh dunia. Film ini terdaftar dalam Guinness World Book of Records 2006 sebagai film tangkap digital pertama.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380156_5c59aa3cd5b8d.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">5. It’s A Wonderful Life, 1946<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: sofyanard.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">It’s A Wonderful Life, 1946<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          It's a Wonderful Life adalah drama komedi fantasi dengan tema Natal. Film ini didasarkan pada buklet The Greatest Gift. Meskipun awalnya berjuang di box office, film ini telah dianggap sebagai klasik dan merupakan pokok hiburan Natal di TV di seluruh dunia. Selama musim Natal, ia mendapat tingkat pemirsa yang secara tradisional tinggi. Ini dianggap sebagai salah satu film yang paling dicintai di bioskop Amerika.
+<br>
+Ceritanya tentang seorang pria yang memutuskan untuk membantu orang lain bunuh diri yang akan segera terjadi pada Malam Natal membawa intervensi malaikat pelindungnya. Malaikat pelindung menunjukkan kepadanya bagaimana kehidupan saat ini dan betapa berbedanya kehidupan di kota Bedford Falls tanpa dia.
+<br>
+Film ini dianggap sebagai salah satu film terhebat yang pernah dibuat. Film ini dinominasikan untuk lima Academy Awards. The American Film Institute menganggap film tersebut sebagai salah satu dari 100 film Amerika terbaik yang pernah dibuat menempatkannya di #11 dan #20 pada tahun 1998 dan 2007 daftar film terbesar.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380216_5c59aa789e812.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">6. A Christmas Story, 1983<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: indonesiatouristnews.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">A Christmas Story, 1983<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          A Christmas Story adalah film komedi Natal berdasarkan In God We Trust: All Other Pay Cash oleh Jean Shepherd. Film ini telah menjadi bagian dari Natal dan musim liburan di Amerika Utara. Ditampilkan beberapa kali di televisi sehingga menjadi film klasik musiman. Ceritanya tentang seorang bocah lelaki bernama Ralphie Parker yang berusaha meyakinkan orang tuanya, gurunya, dan Santa bahwa senapan angin Red Ryder Carbine-Action 200-shot Range Model adalah hadiah paling sempurna untuk Natal. Mereka semua menolak keinginannya, memperingatkannya dengan hal yang sama, "Kamu akan menembakmu keluar." Kisah ini berkisar pada keinginan anak laki-laki itu untuk mendapatkan pistol selama Natal.
+<br>
+Film ini memenangkan dua Penghargaan Genie Kanada pada tahun 1984. Pada tahun 2012, film ini dipilih karena “signifikan secara budaya, historis, atau estetis” oleh Library of Congress untuk pelestarian di National Film Registry.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380275_5c59aab3c3c5e.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">7. The Nightmare Before Christmas, 1993<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: makassar.tribunnews.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">The Nightmare Before Christmas, 1993<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          The Nightmare Before Christmas adalah film animasi Halloween-Natal stop-motion dengan sentuhan fantasi gelap musikal. Ini didasarkan pada cerita dan karakter oleh Tim Burton. Film ini berasal dari puisi yang ditulis oleh Tim Burton pada tahun 1982 ketika bekerja di Walt Disney Feature Animation sebagai animator. Film ini tentang Jack Skellington, Raja "Kota Halloween" yang menemukan Kota Natal dan memutuskan untuk merayakan liburan. Dia berusaha membawa Natal ke rumahnya tetapi malah menimbulkan kebingungan.
+<br>
+Dibuat dengan anggaran $18 juta, film ini meraup $76,2 juta karena tanggapan kritis yang luar biasa. Film ini dinominasikan untuk Academy Award untuk Efek Visual Terbaik, pertama untuk film animasi. Dari 2006 hingga 2009, dirilis ulang setiap tahun di Disney Digital 3-D oleh Walt Disney Pictures.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380473_5c59ab7911619.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">8. A Charlie Brown Christmas, 1965<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: travel.detik.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">A Charlie Brown Christmas, 1965<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          A Charlie Brown Christmas adalah televisi animasi khusus berdasarkan komik dengan nama Peanuts oleh Charles M. Schulz. Pada pertengahan 1960-an, Kacang telah menjadi fenomena di seluruh dunia. Itu sangat terkenal dan istimewa sehingga ditugaskan dan disponsori oleh The Coca-Cola Company. Ceritanya tentang Charlie Brown yang mencoba menemukan makna Natal yang sebenarnya. Dia tertekan melihat komersialisme sekitar Natal dan ingin menemukan makna Natal yang sebenarnya. Linus memberitahunya arti Natal yang sebenarnya, setelah itu ia bersorak. Dia bersatu dengan geng Peanuts dan merayakan Natal.
+<br>
+Sejak pemutaran perdana, A Charlie Brown Christmas telah ditayangkan secara tradisional selama musim Natal setiap tahun. Film ini memenangkan Emmy dan Peabody Award setelah peringkat dan ulasan positif. Soundtrack jazz film ini telah terjual 4 juta kopi di AS.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380550_5c59abc652eec.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">9. National Lampoon’s Christmas Vacation, 1989<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: perjalanansoleh.blogspot.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">National Lampoon’s Christmas Vacation, 1989<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Liburan Natal National Lampoon adalah film komedi Natal berdasarkan cerita yang ditulis oleh John Hughes untuk majalah National Lampoon. Film yang disutradarai oleh Jeremiah S. Chechik telah sering ditandai sebagai klasik Natal modern. Dari 1990 hingga 2015, film ini mencapai enam rilis video rumahan.
+<br>
+          Ceritanya tentang Clark Griswold dan keluarganya yang berusaha menjadikan hal-hal besar untuk perayaan Natal tetapi gagal dan berubah menjadi bencana besar. Pertama-tama mereka memutuskan untuk membuat pohon Natal dan keluarga itu memilih untuk mengambil satu. Tetapi, setelah mencapai tempat itu mereka menyadari bahwa mereka tidak membawa alat apa pun untuk memotong pohon itu. Sebaliknya, mereka mencabut pohon rumah. Dia menghiasi seluruh rumahnya dengan 25.000 lampu berkelap-kelip dan kabel tidak sengaja melalui saklar lampu garasinya. Ini menyebabkan pemadaman listrik sementara di kota. Seluruh cerita adalah hiburan Natal dan komedi yang menyenangkan.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="https://cdn-brilio-net.akamaized.net/community/community-news/2019/02/06/6876bfadbe70bd6a423ad74492f596ed/05-image_1549380639_5c59ac1f81bbd.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">10. Miracle on 34th Street, 1947<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sumber foto: makassar.tribunnews.com</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Miracle on 34th Street, 1947<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Miracle on 34th Street adalah film drama komedi Natal yang didasarkan pada kisah oleh Valentine Davies. Ini adalah film Natal klasik yang ditonton yang memenangkan tiga Academy Awards. Pada tahun 2005, film ini dipilih untuk disimpan di Perpustakaan Kongres oleh National Film Registry sebagai "signifikan secara budaya, historis atau estetis". Pada tahun 2009, Arsip Film Akademi mengawetkan film tersebut. Film ini adalah favorit Natal abadi di AS.
+<br>
+Kisah ini dimulai di Kota New York antara Hari Thanksgiving dan Hari Natal. Ceritanya tentang seorang pria yang mengklaim bahwa dia adalah Santa Claus yang sebenarnya. Ini dimulai ketika pria yang ditugaskan untuk bermain sebagai Santa Claus mabuk dan penggantian melakukannya dengan baik sehingga ia disewa untuk bermain sebagai Santa Claus di toko utama New York City Macy di 34th Street. Pria ini tidak lain adalah Kris Kringle (Edmund Gwenn). Ceritanya bergiliran dan luar biasa untuk melihat bagaimana hal itu terungkap secara spektakuler.
+        </p>
+      </div>
+    </div>
+    
+  </div>
+
+  <p class="flow-text left-align">
+    Sumber:
+    <a href="http://listamaze.com/top-10-christmas-movies-of-all-time/"
+    target=" _blank">www.listamaze.com</a>
+  </p>
+
+
+
 </div>
