--- a/pages/RekomendasiKado.html
+++ b/pages/RekomendasiKado.html
@@ -1,88 +1,208 @@
-
 <div class="card-panel deep-orange lighten-4 col s12 m8 offset-m2">
   <!-- <div id="materialdesign">
     <div class="section"> -->
-      <h2 class="header">7 Inspirasi Kado Natal</h2>
-      <img class="responsive-img"
-        src="https://cdn1-production-images-kly.akamaized.net/LGKrYffOj8TxHsRhMXNixYSSS64=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2513452/original/049877300_1543799962-photo-1512909006721-3d6018887383.jpg">
-      <p class="flow-text left-align">
-        Menjelang Hari Natal, biasanya tukar kado menjadi tradisi yang tidak boleh dilewatkan.
-        Selain sebagai ajang untuk berkumpul bersama keluarga dan mempererat keakraban, tukar kado
-        juga sebagai bukti bahwa kita mengasihi orang tersebut.
-        <br>
-        Untuk beberapa orang, mungkin akan kesulitan untuk menemukan kado Natal yang cocok dengan
-        harga yang terjangkau.
-        <br>
-        Namun kamu tidak perlu khawatir, beberapa kado ini bisa kamu berikan untuk orang tercinta.
-        Selain harganya yang murah, beberapa kado ini juga dijamin akan membuat kenangan yang
-        menyenangkan bagi individu yang menerima kado darimu.
-        <br>
-        Berikut deretan kado yang cocok untuk kamu berikan pada orang cinta menjelang Hari Natal:
-      </p>
+  <h2 class="header">7 Inspirasi Kado Natal</h2>
+  <img class="responsive-img"
+    src="https://cdn1-production-images-kly.akamaized.net/LGKrYffOj8TxHsRhMXNixYSSS64=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2513452/original/049877300_1543799962-photo-1512909006721-3d6018887383.jpg">
+  <p class="flow-text left-align">
+    Menjelang Hari Natal, biasanya tukar kado menjadi tradisi yang tidak boleh dilewatkan.
+    Selain sebagai ajang untuk berkumpul bersama keluarga dan mempererat keakraban, tukar kado
+    juga sebagai bukti bahwa kita mengasihi orang tersebut.
+    <br>
+    Untuk beberapa orang, mungkin akan kesulitan untuk menemukan kado Natal yang cocok dengan
+    harga yang terjangkau.
+    <br>
+    Namun kamu tidak perlu khawatir, beberapa kado ini bisa kamu berikan untuk orang tercinta.
+    Selain harganya yang murah, beberapa kado ini juga dijamin akan membuat kenangan yang
+    menyenangkan bagi individu yang menerima kado darimu.
+    <br>
+    Berikut deretan kado yang cocok untuk kamu berikan pada orang cinta menjelang Hari Natal:
+  </p>
 
-      <div class="col s12 m6">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator"
-              src="https://cdn1-production-images-kly.akamaized.net/s8f3kM4p_1niXKGTTv4oiJaGNNI=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2071328/original/059079400_1523352473-weffffffffderg.jpg">
-          </div>
-          <div class="card-content #ef5350 red lighten-1">
-            <span class="card-title activator grey-text text-darken-4">1. Atribut Natal<i
-                class="material-icons right">more_vert</i></span>
-            <p>Ilustrasi pohon natal (iStock)</p>
-          </div>
-          <div class="card-reveal #ef5350 red lighten-1">
-            <span class="card-title grey-text text-darken-4">Atribut Natal<i
-                class="material-icons right">close</i></span>
-            <p class="flow-text left-align">
-              Kado pertama yang bisa kamu berikan pada orang tercinta yakni atribut Natal, seperti topi sinterklas,
-              gantungan pintu berbentuk lonceng, atau lampu warna-warni yang menjadi penghias pohon Natal.
-              <br>
-              Selain harga yang murah, atribut Natal juga bisa memberikan kenangan tersendiri bagi seseorang
-              yang menerima kado darimu.
-              <br>
-              Ingat ya, yang terpenting bukanlah harga dari kado tersebut, tapi, bagaimana kamu dapat memberikan yang
-              terbaik bagi seseorang yang kamu cintai menjelang Hari Natal. Suatu harga bukanlah menjadi tolak ukur
-              untuk
-              kado dapat dikatakan bagus dan memiliki makna.
-            </p>
-          </div>
-        </div>
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn1-production-images-kly.akamaized.net/s8f3kM4p_1niXKGTTv4oiJaGNNI=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2071328/original/059079400_1523352473-weffffffffderg.jpg">
       </div>
-      
-      <!-- <div class="row">
-        <div class="col s12 m8 offset-m2">
-          <img class="promo"
-            src="https://cdn1-production-images-kly.akamaized.net/s8f3kM4p_1niXKGTTv4oiJaGNNI=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2071328/original/059079400_1523352473-weffffffffderg.jpg">
-          <h4 class="center">1. Atribut Natal</h4>
-          Ilustrasi pohon natal (iStock)
-          <p class="flow-text left-align">
-            Kado pertama yang bisa kamu berikan pada orang tercinta yakni atribut Natal, seperti topi sinterklas,
-            gantungan pintu berbentuk lonceng, atau lampu warna-warni yang menjadi penghias pohon Natal.
-            <br>
-            Selain harga yang murah, atribut Natal juga bisa memberikan kenangan tersendiri bagi seseorang
-            yang menerima kado darimu.
-            <br>
-            Ingat ya, yang terpenting bukanlah harga dari kado tersebut, tapi, bagaimana kamu dapat memberikan yang
-            terbaik bagi seseorang yang kamu cintai menjelang Hari Natal. Suatu harga bukanlah menjadi tolak ukur untuk
-            kado dapat dikatakan bagus dan memiliki makna.
-          </p>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">1. Atribut Natal<i
+            class="material-icons right">more_vert</i></span>
+        <p>Ilustrasi pohon natal (iStock)</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Atribut Natal<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Kado pertama yang bisa kamu berikan pada orang tercinta yakni atribut Natal, seperti topi sinterklas,
+          gantungan pintu berbentuk lonceng, atau lampu warna-warni yang menjadi penghias pohon Natal.
           <br>
-        </div> -->
-
-
-
-
+          Selain harga yang murah, atribut Natal juga bisa memberikan kenangan tersendiri bagi seseorang
+          yang menerima kado darimu.
+          <br>
+          Ingat ya, yang terpenting bukanlah harga dari kado tersebut, tapi, bagaimana kamu dapat memberikan yang
+          terbaik bagi seseorang yang kamu cintai menjelang Hari Natal. Suatu harga bukanlah menjadi tolak ukur
+          untuk
+          kado dapat dikatakan bagus dan memiliki makna.
+        </p>
       </div>
     </div>
   </div>
 
-  <p>
-    Sumber:
-    https://www.liputan6.com/citizen6/read/4134281/jelang-natal-7-inspirasi-kado-yang-murah-meriah-untuk-orang-tercinta
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn1-production-images-kly.akamaized.net/v5qLlb6lqpZX3m-h9nCIFcytJp8=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/968566/original/016037300_1440664795-not_paint_water.png">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">2. Mug<i
+            class="material-icons right">more_vert</i></span>
+        <p>Pernah tidak sengaja minum air rendaman kuas cat? Gelas ini bisa mengingatkan Anda.</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Mug<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Hal mudah yang dapat kamu berikan menjelang Hari Natal adalah mug. Kamu dapat memberikan mug untuk orang yang
+          kamu sayangi. Selain harganya yang terjangkau, mug juga sangat berguna dan akan selalu digunakan apabila
+          didapat dari seseorang yang dicintai.
+          <br>
+          Kamu juga bisa mencari mug dengan gambar variasi yang berbeda. Toko-toko yang menjual mug juga akan
+          menyediakan variasi yang unik sehingga akan membuat kado Natalmu lebih spesial.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn0-production-images-kly.akamaized.net/LT9RrhoFptbcpu8OT7IV0AKMZJI=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/1436097/original/047948200_1481780035-1.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">3. Sweater<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sweater natal dari kristal</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Sweater<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Biasanya menjelang Hari Natal, cuaca berubah menjadi sangat dingin. Nah, kamu bisa memberikan sweater bagi
+          seseorang yang spesial buatmu.
+          <br>
+          Jangan salah, sweater ini tidak akan menguras isi dompetmu kok. Selain harganya yang cukup terjangkau, sweater
+          juga sangat mudah untuk didapatkan.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn1-production-images-kly.akamaized.net/tuuJx93AsEyiKFyZYaSQUyRiUIY=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/1645228/original/047311700_1499757489-shutterstock_595956365.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">4. Hiasan Dinding<i
+            class="material-icons right">more_vert</i></span>
+        <p>Pada zaman ini, kebanyakan seseorang menggunakan kamera ponsel untuk menangkap sebuah momen tertentu.</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Hiasan Dinding<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Kado dalam urutan keempat ini bisa kamu dapatkan dengan mudah, kamu dapat membeli lukisan ataupun bingkai foto
+          yang sudah berisi foto dengan seseorang yang kamu cintai.
+          <br>
+          Untuk harga, tidak perlu khawatir. Hiasan di dinding ini tidak akan membuatmu mengeluarkan banyak uang.
+          <br>
+          Bagaimana, apa kamu tertarik untuk membelinya? Selain memiliki harga yang cukup terjangkau, hiasan di dinding
+          juga bisa memberikan kesan yang hangat dan mudah diingat.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn0-production-images-kly.akamaized.net/4TI8hybZK7u3SzGQF0ZDDZE9Gl8=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2741336/original/097301500_1551496549-foto1_scrapbook.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">5. Scrapbook<i
+            class="material-icons right">more_vert</i></span>
+        <p>(sumber: istockphoto)</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Scrapbook<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Nah, selanjutnya kamu bisa mencari scrapbook dan diisi berbagai foto kenanganmu bersama seseorang yang kamu
+          sayangi.
+          <br>
+          Harganya sudah pasti sangat pas di kantong, bahkan scrapbook berisi foto-foto ini nantinya akan menjadi kado
+          yang romantis yang bisa kamu berikan sebagai hadiah di Hari Natal.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn1-production-images-kly.akamaized.net/qPnqPKoXlsWsmpAc_tKsELk01aU=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2987951/original/091509200_1575555196-1556974834-il-fullxfull-1672888051-8ooc-1556974815.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">6. Sarung Bantal Bergambar<i
+            class="material-icons right">more_vert</i></span>
+        <p>Sarung bantal dengan nama (https://www.etsy.com/)</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Sarung Bantal Bergambar<i
+            class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Untuk kado yang satu ini, kamu akan dengan mudah mendapatkannya. Kamu juga bisa membeli berbagai sarung bantal
+          dengan gambar yang cocok untuk kamu berikan pada seseorang yang kamu sayangi.
+          <br>
+          Untuk ukuran bantalnya pun beragam, kamu tinggal menyesuaikannya saja dengan yang kamu butuhkan saat ingin
+          membeli sarung bantal tersebut.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator"
+          src="https://cdn1-production-images-kly.akamaized.net/-ZXSZDMrLfqGmmRyUriYTXkJjRo=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2748799/original/052058500_1552367627-foto_1.jpg">
+      </div>
+      <div class="card-content #ef5350 red lighten-1">
+        <span class="card-title activator grey-text text-darken-4">7. Aksesoris<i
+            class="material-icons right">more_vert</i></span>
+        <p>(Sumber: iStockphoto)</p>
+      </div>
+      <div class="card-reveal #ef5350 red lighten-1">
+        <span class="card-title grey-text text-darken-4">Aksesoris<i class="material-icons right">close</i></span>
+        <p class="flow-text left-align">
+          Kado yang terakhir ini bisa kamu berikan, seperti gelang, cincin, jam tangan ataupun kalung. Tidak melulu
+          harus emas atau pun perak, yang terpenting adalah makna dari kado yang kamu berikan.
+          <br>
+          Kamu juga bisa memberikan gelang kulit bertuliskan namamu dan nama pasanganmu, atau kamu juga dapat memberikan
+          sebuah jam tangan untuk kekasihmu.
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <p class="left-align">
+    Penulis: Natania Longdong (Universitas Esa Unggul) <br>
+    Sumber: <a
+      href="https://www.liputan6.com/citizen6/read/4134281/jelang-natal-7-inspirasi-kado-yang-murah-meriah-untuk-orang-tercinta"
+      target="_blank">www.liputan6.com</a>
   </p>
 </div>
-
-
-
-
